# Tencent___BrowserSkill

./: AGENT_INSTALL.md  Cargo.toml  README.md  install.ps1  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release-cli.yml
apps/extension/: package.json  vitest.config.ts  wxt.config.ts
apps/extension/src/browser-driver/: chromium-cdp.ts
apps/extension/src/browser-driver/__tests__/: chromium-cdp.test.ts
apps/extension/src/content/: BorrowConfirmationOverlay.tsx  HelpRequestOverlay.tsx
apps/extension/src/content/__tests__/: HelpRequestOverlay.test.tsx
apps/extension/src/entrypoints/: background.ts  content.ts
apps/extension/src/entrypoints/__tests__/: background-interrupt.test.ts
apps/extension/src/entrypoints/popup/: App.test.tsx  App.tsx
apps/extension/src/lib/__tests__/: connection-controller.test.ts  help-bridge.test.ts  overlay-bridge.test.ts  overlay-interrupt-client.test.ts
apps/extension/src/tools/: borrow-confirmation.ts  console.ts  dispatcher.ts  evaluate.ts  human-loop.ts  interaction.ts  navigation.ts  network.ts  observation.ts  session.ts  shared.ts  tabs.ts  waits.ts
apps/extension/src/tools/__tests__/: borrow-confirmation.test.ts  console.test.ts  dispatcher.test.ts  evaluate.test.ts  human-loop.test.ts  interaction.test.ts  navigation.test.ts  network.test.ts  observation.test.ts  session.test.ts  shared.test.ts  tabs.test.ts
apps/extension/src/transport/: build-info.d.ts  types.ts
crates/bsk-cli/: Cargo.toml
crates/bsk-cli/src/: main.rs
crates/bsk-cli/src/cli/: console.rs  daemon.rs  doctor.rs  error.rs  mod.rs  network.rs  update.rs
crates/bsk-cli/src/daemon/: ipc.rs  paths.rs  queue.rs  ws.rs
crates/bsk-cli/tests/: browser_list_ordering.rs  browser_wait.rs  cancel_forwarding.rs  cli_parse.rs  handshake_compat.rs  per_session_queue.rs  session_user_interrupt.rs  sessions_ipc.rs  status_cmd.rs  tools_ipc.rs  tools_m7_ipc.rs  tools_m8_ipc.rs  tools_m9_ipc.rs  ws_handshake.rs
crates/bsk-cli/tests/support/: mod.rs
crates/bsk-protocol/schema/: tool_console_entry.json  tool_console_params.json  tool_console_result.json  tool_console_stack_frame.json  tool_network_entry.json  tool_network_params.json  tool_network_result.json
crates/bsk-protocol/src/: method.rs
crates/bsk-protocol/src/tools/: console.rs  mod.rs  network.rs
scripts/: render-version-json.mjs  render-version-json.test.mjs
